kubernetes/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    role: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      nodePort: 32000
  type: NodePort
